feat(dependencies): add nodemon and scripts

--- a/api/package.json
+++ b/api/package.json
@@ -1,11 +1,16 @@
 {
   "name": "cms-api",
   "version": "0.0.1",
+  "scripts": {
+    "nodemon": "nodemon app.js",
+    "start": "node app.js"
+  },
   "dependencies": {
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.1",
-    "mongoose": "^6.2.1"
+    "mongoose": "^6.2.1",
+    "nodemon": "^2.0.15"
   }
 }
