--- a/api/api_v1/package.json
+++ b/api/api_v1/package.json
@@ -25,6 +25,7 @@
     "winston": "^3.6.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
